# ros2_scara

./: 404.html  README.md  index.html  mkdocs.yml  search.html  sitemap.xml
1-0-Ros2 installation/: index.html
2-0-Canal de referencia/: index.html
2-0-Requisitos/: index.html
3-0-Requisitos/: index.html
3-0-primerosPasosRos/: index.html
4-0-Canal de referencia/: index.html
4-0-primerosPasosRos/: index.html
4-1-URDF/: index.html
5-0-Scara/: index.html
5-0-Servo/: index.html
5-1-ScaraXacros/: index.html
5-1-ServoXacros/: index.html
5-2-ScaraControllers/: index.html
5-2-ServoControllers/: index.html
5-3-ScaraMoveIt/: index.html
5-3-ServoMoveIt/: index.html
5-4-ScaraHardware/: index.html
5-4-ScaraHardware y arduino/: index.html
5-4-ServoHardware y arduino/: index.html
5-5-ScaraLaunch/: index.html
5-5-ServoLaunch/: index.html
6-0-SCARA/: index.html
9-0-Anexos/: index.html
Ros2 installation/: index.html
docs/: 1-0-Ros2 installation.md  2-0-Canal de referencia.md  2-0-Requisitos.md  3-0-Requisitos.md  3-0-primerosPasosRos.md  4-0-Canal de referencia.md  4-0-primerosPasosRos.md  4-1-URDF.md  5-0-Scara.md  5-0-Servo.md  5-1-ScaraXacros.md  5-1-ServoXacros.md  5-2-ScaraControllers.md  5-2-ServoControllers.md  5-3-ScaraMoveIt.md  5-3-ServoMoveIt.md  5-4-ScaraHardware y arduino.md  5-4-ScaraHardware.md  5-4-ServoHardware y arduino.md  5-5-ScaraLaunch.md  5-5-ServoLaunch.md  6-0-SCARA.md  9-0-Anexos.md  Ros2 installation.md  index.md
scara/: CMakeLists.txt  package.xml
scara/config/: ros2_controllers.yaml
scara/launch/: simulation.launch.py  view.launch.py
scara/meshes/: antebrazo.stl  base.stl  brazo.stl  dedo.stl  mano.stl
scara/rviz/: view.rviz
scara/urdf/: gazebo.xacro  urdf.xacro
scara_hardware/: CMakeLists.txt  package.xml  scara_hardware.xml
scara_hardware/config/: ros2_control.xacro
scara_hardware/description/: ros2_control.xacro
scara_hardware/firmware/calibracion_dedo/: calibracion_dedo.ino
scara_hardware/firmware/firmware_v0.1/: firmware_v0.1.ino
scara_hardware/hardware/: scara_system.cpp
scara_hardware/hardware/include/scara_hardware/: arduino_comms.hpp  joint.hpp  scara_system.hpp  visibility_control.h
scara_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
scara_moveit_config/config/: chomp_planning.yaml  gazebo.xacro  joint_limits.yaml  kinematics.yaml  mock.xacro  moveit_controllers.yaml  pilz_cartesian_limits.yaml  scara.srdf  scara.urdf
scara_moveit_config/launch/: demo.launch.py  gazebo.launch.py  mock.launch.py  moveit.rviz
search/: search_index.json
