<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara</name>
  <version>2023.10.5</version>
  <description>Demo package of `ros2_control` hardware for DiffBot.</description>

  <author     email="dcasta25@eafit.edu.co">Dr. Davinson Castano-Cano</author>
  <maintainer email="dcasta25@eafit.edu.co">Dr. Davinson Castano-Cano</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz2</depend>
  <depend>robot_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "${prefix}/.."/>
  </export>
</package>
