<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_hardware</name>
  <version>2023.10.5</version>
  <description>This package creates a hardware component using a systema hardware interface-type. It uses position command and velocity and position state interfaces. </description>

  <author     email="dcasta25@eafit.edu.co">Dr. Davinson Castano-Cano</author>
  <maintainer email="dcasta25@eafit.edu.co">Dr. Davinson Castano-Cano</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
